@@ -1,5 +1,5 @@
-film.width = 640
-film.height = 480
+film.width = 800
+film.height = 600
 # Use a value > 0 to enable batch mode
 batch.halttime = 0
 scene.file = scenes/bigmonkey/bigmonkey.scn
@@ -16,7 +16,7 @@ opencl.gpu.use = 1
 # Use a value of 0 to enable default value
 opencl.gpu.workgroup.size = 64
 screen.refresh.interval = 100
-path.maxdepth = 3
+path.maxdepth = 1
 path.russianroulette.depth = 5
 path.clamping.variance.maxvalue = 1
 # Film image pipeline plug-ins
