@@ -17,6 +17,10 @@ scene.materials.shell.basecolor = 0.6 0.0 0.0
 ##
 #scene.materials.shell.subsurface = 0.5
 ##
+scene.materials.shell.specular = 0.5
+scene.materials.shell.roughness = 0.2
+scene.materials.shell.clearcoatgloss = 1.0
+##
 scene.materials.whitematte.type = matte
 scene.materials.whitematte.kd = 0.75 0.75 0.75
 scene.materials.luxtext.type = matte
